feat: adding new endpoints to register new user and get statistics for the user, adding persistence layer to store this information
