# backend/src/main/java/com/techub/rps/control/model/UserStatistics.java
@@ -1,0 +1,17 @@
+package com.techub.rps.control.model;
+
+import lombok.Builder;
+import lombok.Value;
+import java.time.Instant;
+
+@Value
+@Builder
+public class UserStatistics {
+    String username;
+    Integer gamesPlayed;
+    Integer wins;
+    Integer losses;
+    Integer draws;
+    String lastGameId;
+    Instant lastGamePlayedAt;
+}
